// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedHeader Animated Header 1`] = `
<span>
  <h1
    className="animated-header"
  >
    <span
      className="animated-char "
      key="0"
    >
      H
    </span>
    <span
      className="animated-char "
      key="1"
    >
      e
    </span>
    <span
      className="animated-char "
      key="2"
    >
      l
    </span>
    <span
      className="animated-char "
      key="3"
    >
      l
    </span>
    <span
      className="animated-char "
      key="4"
    >
      o
    </span>
    <span
      className="space"
      key="5"
    >
       
    </span>
    <br
      className="hidden-mobile"
    />
    <span
      className="animated-char different-color"
      key="0"
    >
      W
    </span>
    <span
      className="animated-char different-color"
      key="1"
    >
      o
    </span>
    <span
      className="animated-char different-color"
      key="2"
    >
      r
    </span>
    <span
      className="animated-char different-color"
      key="3"
    >
      l
    </span>
    <span
      className="animated-char different-color"
      key="4"
    >
      d
    </span>
    <span
      className="animated-char different-color"
      key="5"
    >
      !
    </span>
  </h1>
</span>
`;

exports[`AnimatedHeader Animated Header with header only 1`] = `
<span>
  <h1
    className="animated-header"
  >
    <span
      className="animated-char "
      key="0"
    >
      H
    </span>
    <span
      className="animated-char "
      key="1"
    >
      e
    </span>
    <span
      className="animated-char "
      key="2"
    >
      l
    </span>
    <span
      className="animated-char "
      key="3"
    >
      l
    </span>
    <span
      className="animated-char "
      key="4"
    >
      o
    </span>
    <span
      className="space"
      key="5"
    >
       
    </span>
    <span
      className="animated-char "
      key="6"
    >
      W
    </span>
    <span
      className="animated-char "
      key="7"
    >
      o
    </span>
    <span
      className="animated-char "
      key="8"
    >
      r
    </span>
    <span
      className="animated-char "
      key="9"
    >
      l
    </span>
    <span
      className="animated-char "
      key="10"
    >
      d
    </span>
    <span
      className="animated-char "
      key="11"
    >
      !
    </span>
    <br
      className="hidden-mobile"
    />
  </h1>
</span>
`;

exports[`AnimatedHeader Animated Header with secondColorHeader only 1`] = `
<span>
  <h1
    className="animated-header"
  >
    <br
      className="hidden-mobile"
    />
    <span
      className="animated-char different-color"
      key="0"
    >
      H
    </span>
    <span
      className="animated-char different-color"
      key="1"
    >
      e
    </span>
    <span
      className="animated-char different-color"
      key="2"
    >
      l
    </span>
    <span
      className="animated-char different-color"
      key="3"
    >
      l
    </span>
    <span
      className="animated-char different-color"
      key="4"
    >
      o
    </span>
    <span
      className="space"
      key="5"
    >
       
    </span>
    <span
      className="animated-char different-color"
      key="6"
    >
      W
    </span>
    <span
      className="animated-char different-color"
      key="7"
    >
      o
    </span>
    <span
      className="animated-char different-color"
      key="8"
    >
      r
    </span>
    <span
      className="animated-char different-color"
      key="9"
    >
      l
    </span>
    <span
      className="animated-char different-color"
      key="10"
    >
      d
    </span>
    <span
      className="animated-char different-color"
      key="11"
    >
      !
    </span>
  </h1>
</span>
`;

exports[`AnimatedHeader Animated Header without params 1`] = `
<span>
  <h1
    className="animated-header"
  >
    <br
      className="hidden-mobile"
    />
  </h1>
</span>
`;
